--- a/index.html
+++ b/index.html
@@ -1,15 +1,182 @@
 <!DOCTYPE html>
 <html lang="en">
-    <!-- David Kejval -->
-    <!-- kejval90@icloud.com -->
-    <!--  David K. -->
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style/styles.css">
+  <!-- David Kejval -->
+  <!-- kejval90@icloud.com -->
+  <!--  David K. -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style/styles.css" />
     <title>Projekt1</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <ul class="menu website-container">
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">What We Do</a></li>
+          <li><a href="#">Our Trips</a></li>
+          <li><a href="#">Where To Go</a></li>
+          <li><a href="#">Reviews</a></li>
+          <img src="./img/menu.png" alt="MenuIcon" class="menu-icon" />
+        </ul>
+      </nav>
+    </header>
+    <section class="h1-container">
+      <div class="header-container website-container">
+        <h1>
+          Your <br />
+          Travel <br />
+          Assistant
+        </h1>
+      </div>
+    </section>
+    <section class="about-container">
+      <div class="about-content website-container">
+        <img
+          class="about-img"
+          src="./img/anneliese-phillips-uv4-vl3liKM-unsplash.jpg"
+          alt=""
+        />
+        <h2>About Us</h2>
+        <p>
+          Leigh McAdam is a Calgary-based writer, photographer and social media
+          enthusiast with over 48,000 followers. Her blog: HikeBikeTravel is
+          frequently cited as one of the top travel and outdoor adventure blogs
+          in Canada, and consistently receives over 135,000 monthly page views.
+          She shares her enthusiasm for the outdoors as a brand ambassador for
+          Sporting Life, and has worked on campaigns for Travel Alberta, Expedia
+          and Flight Hub. Leigh is the author of Discover Canada: 100 Inspiring
+          Outdoor Adventures. Currently, she is co-authoring: 125 Nature Hot
+          Spots in Alberta (spring 2018). A true adventurer, Leigh will try
+          anything once, except perhaps bungee jumping.
+        </p>
+      </div>
+    </section>
+    <section class="what-we-do-container">
+      <div class="what-we-do-heading">
+        <h2>What We Do</h2>
+      </div>
+      <div class="what-we-do-container-content website-container">
+        <p>
+          Opportunities for challenging hikes and pleasant strolls are scattered
+          all over this planet; you just need to know where to find them. We do.
+          Kilimanjaro, Everest Base Camp, Patagonia, and the Inca Trail are out
+          there, waiting for you to walk all over them. We’re proud of our
+          record of successful ascents (over 92% of our travellers make it to
+          the top of Kili, depending on the route), but it’s our CEOs and local
+          guides that make the journey itself as memorable as the summit. And if
+          you’re not into big climbs, don’t sweat it; we’ve got loads of
+          lower-impact walks and iconic treks you’ll love, too.
+        </p>
+      </div>
+      <div class="icon-container website-container">
+        <div class="hiking">
+          <img src="../icons/png-icons-white/hiking-white.png" alt="Hiking" />
+          <h3>Hiking</h3>
+        </div>
+        <div class="cycling">
+          <img src="../icons/png-icons-white/cycle-white.png" alt="Cycling" />
+          <h3>Cycling</h3>
+        </div>
+        <div class="surfing">
+          <img src="../icons/png-icons-white/water-white.png" alt="Surfing" />
+          <h3>Surfing</h3>
+        </div>
+        <div class="car-tips">
+          <img src="../icons/png-icons-white/car-white.png" alt="CarTips" />
+          <h3>Car Tips</h3>
+        </div>
+      </div>
+    </section>
+    <section class="gallery-container website-container">
+      <img src="../img/simon-english-48nerZQCHgo-unsplash.jpg" alt="Hiking" />
+      <img src="../img/james-wheeler-ZOA-cqKuJAA-unsplash.jpg" alt="Lake" />
+      <img src="../img/daniel-tseng-73lmMKhi2U8-unsplash.jpg" alt="Forest" />
+      <img src="../img/holly-mandarich-UVyOfX3v0Ls-unsplash.jpg" alt="Hiking" />
+      <img src="../img/trips.png" class="custom-img" alt="OurTrips" />
+      <img src="../img/patrick-szylar-45bM3XGqnDE-unsplash.jpg" alt="Lake" />
+      <img
+        src="../img/chung-yee-tsang-wqxCKM0R6R8-unsplash.jpg"
+        alt="NightSky"
+      />
+      <img
+        src="../img/julian-bialowas-ilkTnuMunP8-unsplash.jpg"
+        alt="Camping"
+      />
+      <img src="../img/matej-drha-rbDzMcJsBkY-unsplash.jpg" alt="Plants" />
+    </section>
+    <section class="contact-container">
+      <div class="contact-container-content website-container">
+        <h2>
+          Where do you<br />
+          want to go?
+        </h2>
+        <p>
+          You’ll find 21 detailed adventure guides, over a hundred practical
+          travel tips, book reviews on anything outdoors related, packing lists
+          on a range of outdoor activities including kayaking, backpacking and
+          camping as well as honest hotel and B&B reviews.
+          <span>Contact us and we will help you!</span>
+        </p>
+      </div>
+      <div class="button-container website-container">
+        <button id="button1">Contact Us</button>
+      </div>
+    </section>
+    <section class="reviews-container website-container">
+      <div class="reviews-content">
+        <h2>Reviews</h2>
+        <p>
+          Our amazing clients are the reason we exist, and their reactions to
+          our customized travel experiences and personalized service keep us
+          smiling all day long. Here is just a sampling of what they’ve said:
+        </p>
+      </div>
+      <div class="reviews-coments">
+        <div class="comment-first">
+          <img src="/img/kalen-emsley-kGSapVfg8Kw-unsplash.jpg" alt="" />
+          <p>
+            She has booked two major European trips for us in the past year and
+            every aspect has met, and in most cases exceeded, our expectations.
+            Best prices, best hotels, best itineraries, and best cruises, she
+            does it all. But the most important thing is she remembers the
+            little things that we would do if we were making the plans
+            ourselves.
+          </p>
+          <h3>Bertie Norton</h3>
+        </div>
+        <div class="comment-second">
+          <img src="/img/jeffrey-keenan-pUhxoSapPFA-unsplash.jpg" alt="" />
+          <p>
+            Leigh McAdam has been making my travel arrangements for about 20
+            years and there is no one else I would trust to arrange my trips and
+            tours. I've also had great fun on a few of the group trips she has
+            arranged - Peru & Machu Picchu and a 10-day cruise out of Venice and
+            diving. It's always an eclectic group of well traveled, interesting
+            people.
+          </p>
+          <h3>Frank Kinney</h3>
+        </div>
+      </div>
+    </section>
+    <section class="image-container">
+      <img src="/img/alexey-fedenkov-BaCZYH9RLmQ-unsplash.jpg" alt="Beach" />
+      <img src="/img/omer-salom-LoijtQXXNhs-unsplash.jpg" alt="GrandCanyon" />
+      <img src="/img/chung-yee-tsang-wqxCKM0R6R8-unsplash.jpg" alt="NightSky" />
+      <img src="/img/daniel-tseng-73lmMKhi2U8-unsplash.jpg" alt="Forest" />
+    </section>
+    <footer>
+      <div class="footer-div">
+        <a href="#">Contact</a>
+        <h6>&copy;2024 - Your Travel Assistant. All Rights Reserved.</h6>
+      </div>
+    </footer>
+  </body>
 </html>
