--- a/index.html
+++ b/index.html
@@ -78,39 +78,36 @@
       </div>
       <div class="icon-container website-container">
         <div class="hiking">
-          <img src="../icons/png-icons-white/hiking-white.png" alt="Hiking" />
+          <img src="./icons/png-icons-white/hiking-white.png" alt="Hiking" />
           <h3>Hiking</h3>
         </div>
         <div class="cycling">
-          <img src="../icons/png-icons-white/cycle-white.png" alt="Cycling" />
+          <img src="./icons/png-icons-white/cycle-white.png" alt="Cycling" />
           <h3>Cycling</h3>
         </div>
         <div class="surfing">
-          <img src="../icons/png-icons-white/water-white.png" alt="Surfing" />
+          <img src="./icons/png-icons-white/water-white.png" alt="Surfing" />
           <h3>Surfing</h3>
         </div>
         <div class="car-tips">
-          <img src="../icons/png-icons-white/car-white.png" alt="CarTips" />
+          <img src="./icons/png-icons-white/car-white.png" alt="CarTips" />
           <h3>Car Tips</h3>
         </div>
       </div>
     </section>
     <section class="gallery-container website-container">
-      <img src="../img/simon-english-48nerZQCHgo-unsplash.jpg" alt="Hiking" />
-      <img src="../img/james-wheeler-ZOA-cqKuJAA-unsplash.jpg" alt="Lake" />
-      <img src="../img/daniel-tseng-73lmMKhi2U8-unsplash.jpg" alt="Forest" />
-      <img src="../img/holly-mandarich-UVyOfX3v0Ls-unsplash.jpg" alt="Hiking" />
-      <img src="../img/trips.png" class="custom-img" alt="OurTrips" />
-      <img src="../img/patrick-szylar-45bM3XGqnDE-unsplash.jpg" alt="Lake" />
+      <img src="./img/simon-english-48nerZQCHgo-unsplash.jpg" alt="Hiking" />
+      <img src="./img/james-wheeler-ZOA-cqKuJAA-unsplash.jpg" alt="Lake" />
+      <img src="./img/daniel-tseng-73lmMKhi2U8-unsplash.jpg" alt="Forest" />
+      <img src="./img/holly-mandarich-UVyOfX3v0Ls-unsplash.jpg" alt="Hiking" />
+      <img src="./img/trips.png" class="custom-img" alt="OurTrips" />
+      <img src="./img/patrick-szylar-45bM3XGqnDE-unsplash.jpg" alt="Lake" />
       <img
-        src="../img/chung-yee-tsang-wqxCKM0R6R8-unsplash.jpg"
+        src="./img/chung-yee-tsang-wqxCKM0R6R8-unsplash.jpg"
         alt="NightSky"
       />
-      <img
-        src="../img/julian-bialowas-ilkTnuMunP8-unsplash.jpg"
-        alt="Camping"
-      />
-      <img src="../img/matej-drha-rbDzMcJsBkY-unsplash.jpg" alt="Plants" />
+      <img src="./img/julian-bialowas-ilkTnuMunP8-unsplash.jpg" alt="Camping" />
+      <img src="./img/matej-drha-rbDzMcJsBkY-unsplash.jpg" alt="Plants" />
     </section>
     <section class="contact-container">
       <div class="contact-container-content website-container">
@@ -141,7 +138,7 @@
       </div>
       <div class="reviews-coments">
         <div class="comment-first">
-          <img src="/img/kalen-emsley-kGSapVfg8Kw-unsplash.jpg" alt="" />
+          <img src="./img/kalen-emsley-kGSapVfg8Kw-unsplash.jpg" alt="" />
           <p>
             She has booked two major European trips for us in the past year and
             every aspect has met, and in most cases exceeded, our expectations.
@@ -153,7 +150,7 @@
           <h3>Bertie Norton</h3>
         </div>
         <div class="comment-second">
-          <img src="/img/jeffrey-keenan-pUhxoSapPFA-unsplash.jpg" alt="" />
+          <img src="./img/jeffrey-keenan-pUhxoSapPFA-unsplash.jpg" alt="" />
           <p>
             Leigh McAdam has been making my travel arrangements for about 20
             years and there is no one else I would trust to arrange my trips and
@@ -167,10 +164,13 @@
       </div>
     </section>
     <section class="image-container">
-      <img src="/img/alexey-fedenkov-BaCZYH9RLmQ-unsplash.jpg" alt="Beach" />
-      <img src="/img/omer-salom-LoijtQXXNhs-unsplash.jpg" alt="GrandCanyon" />
-      <img src="/img/chung-yee-tsang-wqxCKM0R6R8-unsplash.jpg" alt="NightSky" />
-      <img src="/img/daniel-tseng-73lmMKhi2U8-unsplash.jpg" alt="Forest" />
+      <img src="./img/alexey-fedenkov-BaCZYH9RLmQ-unsplash.jpg" alt="Beach" />
+      <img src="./img/omer-salom-LoijtQXXNhs-unsplash.jpg" alt="GrandCanyon" />
+      <img
+        src="./img/chung-yee-tsang-wqxCKM0R6R8-unsplash.jpg"
+        alt="NightSky"
+      />
+      <img src="./img/daniel-tseng-73lmMKhi2U8-unsplash.jpg" alt="Forest" />
     </section>
     <footer>
       <div class="footer-div">
